--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,9 +5,8 @@
 
 html {
   background: #d8d8d8;
-  font-family: "museo-sans-1","museo-sans-2", Verdana, sans-serif;
   font-size: 14px;
   font-weight: 300;
   color: #333;
-  background: url(../../img/exotic-polkadots-patterns-5.jpg);
+  background: url(../../img/background.jpg);
 }
