--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>{{ site.title | default: site.github.repository_name}} by {{ site.github.owner_name }}</title>
-
+  	{% include head.html %}
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
@@ -24,8 +24,6 @@
 
         {% if site.github.is_user_page %}
 <!--           <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p> -->
-          <p class="view"><a href="photos.html">Photos</a></p>
-          <p class="view"><a href="photos.html">Wedding</a></p>
         {% endif %}
 
         {% if site.show_downloads %}
@@ -35,24 +33,31 @@
             <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
           </ul>
         {% endif %}
-         	<p class="view"><a href="photos.html">Photos</a></p>
-          	<p class="view"><a href="wedding.html">The Wedding</a></p>
-        	<p class="view"><a href="hotel.html">Hotels</a></p>
-            <p class="view"><a href="registry.html">Registry</a></p>
-            <p class="view"><a href="rsvp.html">RSVP</a></p>
+
+        	<h3 class="view"><a href="index.html">Home</a></h3>
+        	<br>
+         	<h3 class="view"><a href="photos.html">Photos</a></h3>
+          	<br>
+          	<h3 class="view"><a href="wedding.html">The Wedding</a></h3>
+        	<br>
+        	<h3 class="view"><a href="hotel.html">Hotels</a></h3>
+            <br>
+            <h3 class="view"><a href="registry.html">Registry</a></h3>
+            <br>
+            <h3 class="view"><a href="rsvp.html">RSVP</a></h3>
 
 
       </header>
       <section>
-
+		<div class="container">
       {{ content }}
-
+	</div>
       </section>
       <footer>
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on GitHub Pages <br> Theme modified from Minimal by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
