--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
-        <p><small>Hosted on GitHub Pages <br> Theme modified from Minimal by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on GitHub Pages <br> Source code <a href="https://github.com/micah-cecilia/micah-cecilia.github.io">here</a></small></p>
       </footer>
     </div>
     <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
