new background, layout adjust

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,8 +16,8 @@ html {
   font-size: 14px;
   font-weight: 300;
   color: #333;
-  background: url(../../img/background-3.jpg);
-  background-size: 15%;
+  background: url(../../img/background-8.jpg);
+  background-size: 70%;
   font-family:Georgia;
   background-repeat: repeat;
   padding: 0px;
@@ -81,12 +81,12 @@ a:hover {
 }
 
 
-header {
-	margin-top: 80px;
+.header {
+	margin-top: 140px;
 	margin-left: 0px;
 	padding: 0px;
 	width: 130px;
-	float: center;
+	float: left;
 	text-align: center;
 	background: white;
 	-moz-border-radius: 5px;
@@ -103,9 +103,14 @@ footer {
 }
 
 section {
- 	margin-left: 140px;
+ 	//margin-left: 140px;
 	width: 650px;
 	float: left;
+}
+
+#registry-img{
+	-moz-border-radius: 5px;
+	border-radius: 5px;
 }
 
 nav {
