--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <header>
+      <div class="header">
         <h1>{{ site.title }}</h1>
         <p>{{ site.description }}</p>
 
@@ -47,7 +47,7 @@
             <h3 class="view"><a href="rsvp.html">RSVP</a></h3>
 
 
-      </header>
+      </div>
       <section>
 		<div class="container">
       {{ content }}
