trying to fix slideshow, pic adjustments

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>{{ site.title | default: site.github.repository_name}} by {{ site.github.owner_name }}</title>
+<!--     <title>{{ site.title | default: site.github.repository_name}} by {{ site.github.owner_name }}</title> -->
+	<title>Micah and Cecilia's Wedding!</title>
   	{% include head.html %}
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <meta name="viewport" content="width=device-width">
@@ -34,6 +35,7 @@
           </ul>
         {% endif %}
 
+			<h3><img src="img/menu-background3.jpeg" width=90% height=90%></h3>
         	<h3 class="view"><a href="index.html">Home</a></h3>
         	<br>
          	<h3 class="view"><a href="photos.html">Photos</a></h3>
