hotel updates etc

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
           </ul>
         {% endif %}
 
-			<h3><img src="img/menu-background3.jpeg" width=90% height=90%></h3>
+			<h3><img src="img/menu-background3a.jpg" width=90% height=90%></h3>
         	<h3 class="view"><a href="index.html">Home</a></h3>
         	<br>
          	<h3 class="view"><a href="photos.html">Photos</a></h3>
@@ -47,6 +47,7 @@
             <h3 class="view"><a href="registry.html">Registry</a></h3>
             <br>
             <h3 class="view"><a href="rsvp.html">RSVP</a></h3>
+            <br>
 
 
       </div>
