--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -127,6 +127,7 @@ header ul {
 footer {
 	width: 130px;
 	line-height: 1;
+	float: right;
 }
 
 section {
@@ -208,10 +209,23 @@ nav {
 .embed-pane input {
 	width: 100%;
 	margin: auto;
-	display: block;
+	display: hidden;
 	border-color: #CCC;
 	box-sizing: border-box;
 	border-style: solid;
 	border-width: 1px;
 	padding: 7px;
+}
+#scaled-frame {
+	//zoom: 0.78;
+	padding: 0px;
+	-ms-zoom: 0.82;
+ 	-moz-transform: scale(0.82);
+ 	-moz-transform-origin: 0 0;
+ 	transform: scale(0.82);
+	-o-transform: scale(0.82);
+	-o-transform-origin: 0 0;
+	-webkit-transform: scale(0.82);
+	-webkit-transform-origin: 0 0;
+	align: "center";
 }
