--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,8 @@
           </ul>
         {% endif %}
 
-			<h3><img src="img/menu-background3a.jpg" width=90% height=90%></h3>
+<!-- 			<h3><img src="img/menu-background3a.jpg" width=90% height=90%></h3> -->
+			<h3><img src="img/flower1.png" width="95%" height="95%"></h3>
         	<h3 class="view"><a href="index.html">Home</a></h3>
         	<br>
          	<h3 class="view"><a href="photos.html">Photos</a></h3>
@@ -56,14 +57,15 @@
       {{ content }}
 	</div>
       </section>
+    </div>
+    <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
       <footer>
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
-        <p><small>Hosted on GitHub Pages <br> Source code <a href="https://github.com/micah-cecilia/micah-cecilia.github.io">here</a></small></p>
+        <p><small>Hosted on GitHub Pages <br> Source code <a href="https://github.com/micah-cecilia/micah-cecilia.github.io">here</a><br>
+        Art by <a href="https://nataliedupille.com">Natalie Dupille</a></small></p>
       </footer>
-    </div>
-    <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
 
 
   {% if site.google_analytics %}
