--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,9 @@
     <![endif]-->
   </head>
   <body>
+
     <div class="wrapper">
-      <div class="header">
+        <div class="header">
         <h1>{{ site.title }}</h1>
         <p>{{ site.description }}</p>
 
@@ -58,14 +59,13 @@
 	</div>
       </section>
     </div>
-    <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
       <footer>
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
-        <p><small>Hosted on GitHub Pages <br> Source code <a href="https://github.com/micah-cecilia/micah-cecilia.github.io">here</a><br>
-        Art by <a href="https://nataliedupille.com">Natalie Dupille</a></small></p>
+        <p style="font-size:12.5px">Art by <a href="https://nataliedupille.com">Natalie Dupille</a> <br>Hosted on GitHub Pages <br> Source code <a href="https://github.com/micah-cecilia/micah-cecilia.github.io">here</a></p>
       </footer>
+    <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
 
 
   {% if site.google_analytics %}
