--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,8 +5,10 @@
 
 .wrapper {
 	padding: 0px;
-	background: url(../../img/background-8.jpg);
+// 	background: url(../../img/background-8.jpg);
 	background-size: 70%;
+//  	float: center;
+  	width: 100%;
 }
 
 body {
@@ -61,7 +63,7 @@ img {
 
 p {
 	font-size:18px;
-	margin: 10px;
+	margin: 5px;
 }
 
 a {
@@ -75,7 +77,7 @@ a:hover {
 }
 
 .container {
-  float: center;
+  float: left; //within section
   width: 650px;
   margin: 50px auto 40px auto;
   background: #fff;
@@ -89,16 +91,18 @@ a:hover {
 //   text-align: center;
   img-align: center;
   padding: 20px;
-  margin-left: 40px;
+    margin-left: 30px;
 }
 
 
 .header {
+	position:relative;
+	float: left;
 	margin-top: 140px;
-	margin-left: 0px;
+ 	margin-left: 10%;
 	padding: 0px;
 	width: 130px;
-	float: left;
+	top: 0%;
 	text-align: center;
 	background: #fff;//#FED675;//#FFED95;////#FFB871;
 // 	border-color: #f96705;
@@ -125,15 +129,16 @@ header ul {
 }
 
 footer {
-	width: 130px;
+	width: 180px;
 	line-height: 1;
 	float: right;
+	bottom: 3%;
 }
 
 section {
  	//margin-left: 140px;
-	width: 650px;
-	float: left;
+ 	width: 75%;
+	float: center;
 }
 
 #registry-img{
