--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,7 +6,7 @@
 .wrapper {
 	padding: 0px;
 // 	background: url(../../img/background-8.jpg);
-	background-size: 70%;
+// 	background-size: 70%;
 //  	float: center;
   	width: 100%;
 }
@@ -16,7 +16,7 @@ body {
 }
 
 html {
-  background: #d8d8d8;
+//   background: #d8d8d8;
   font-size: 14px;
   font-weight: 300;
   color: #333;
