--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,9 @@
           	<h3 class="view"><a href="wedding.html">The Wedding</a></h3>
         	<br>
         	<h3 class="view"><a href="hotel.html">Hotels</a></h3>
-            <br>
+        	<br>
+        	<h3 class="view"><a href="happy_hour.html">Happy Hour</a></h3>
+		<br>
             <h3 class="view"><a href="registry.html">Registry</a></h3>
             <br>
             <h3 class="view"><a href="rsvp.html">RSVP</a></h3>
